--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+h3{
+    font-size: 1.2rem;
+}
+
 body {
     background-color: rgb(230, 230, 230);
     color: rgb(0, 0, 0);
